test: use List.getFirst() per Java 21+ idiom
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>